--- a/source/htaccess/.htaccess
+++ b/source/htaccess/.htaccess
@@ -1338,107 +1338,10 @@ Redirect 301 /blogs/000117.html http://zanshin.net/1999/12/10/our-four-agreement
 
 # redirect old tag pages to archives. ugly, but better than nothing
 # TO-DO - change to categories page, once a categories page exists
-Redirect 301 /tag/.*/ http://zanshin.net/archives/
+RedirectMatch 301 /tag/.*/ http://zanshin.net/archives/
 
 # monthly archive redirects
-Redirect 301 /blogs/\d{4}_\d{2}.html http://zanshin.net/archives/
-#Redirect 301 /blogs/1999_12.html http://zanshin.net/1999/12/
-#Redirect 301 /blogs/2000_01.html http://zanshin.net/2000/01/
-#Redirect 301 /blogs/2000_02.html http://zanshin.net/2000/02/
-#Redirect 301 /blogs/2000_03.html http://zanshin.net/2000/03/
-#Redirect 301 /blogs/2000_04.html http://zanshin.net/2000/04/
-#Redirect 301 /blogs/2000_05.html http://zanshin.net/2000/05/
-#Redirect 301 /blogs/2000_06.html http://zanshin.net/2000/06/
-#Redirect 301 /blogs/2000_07.html http://zanshin.net/2000/07/
-#Redirect 301 /blogs/2000_08.html http://zanshin.net/2000/08/
-#Redirect 301 /blogs/2000_09.html http://zanshin.net/2000/09/
-#Redirect 301 /blogs/2000_10.html http://zanshin.net/2000/10/
-#Redirect 301 /blogs/2000_11.html http://zanshin.net/2000/11/
-#Redirect 301 /blogs/2000_12.html http://zanshin.net/2000/12/
-#Redirect 301 /blogs/2001_01.html http://zanshin.net/2001/01/
-#Redirect 301 /blogs/2001_02.html http://zanshin.net/2001/02/
-#Redirect 301 /blogs/2001_03.html http://zanshin.net/2001/03/
-#Redirect 301 /blogs/2001_04.html http://zanshin.net/2001/04/
-#Redirect 301 /blogs/2001_05.html http://zanshin.net/2001/05/
-#Redirect 301 /blogs/2001_06.html http://zanshin.net/2001/06/
-#edirect 301 /blogs/2001_07.html http://zanshin.net/2001/07/
-#Redirect 301 /blogs/2001_08.html http://zanshin.net/2001/08/
-#Redirect 301 /blogs/2001_09.html http://zanshin.net/2001/09/
-#Redirect 301 /blogs/2001_10.html http://zanshin.net/2001/10/
-#Redirect 301 /blogs/2001_11.html http://zanshin.net/2001/11/
-#Redirect 301 /blogs/2001_12.html http://zanshin.net/2001/12/
-#Redirect 301 /blogs/2002_01.html http://zanshin.net/2002/01/
-#Redirect 301 /blogs/2002_02.html http://zanshin.net/2002/02/
-#Redirect 301 /blogs/2002_03.html http://zanshin.net/2002/03/
-#Redirect 301 /blogs/2002_04.html http://zanshin.net/2002/04/
-#Redirect 301 /blogs/2002_05.html http://zanshin.net/2002/05/
-#Redirect 301 /blogs/2002_06.html http://zanshin.net/2002/06/
-#Redirect 301 /blogs/2002_07.html http://zanshin.net/2002/07/
-#Redirect 301 /blogs/2002_08.html http://zanshin.net/2002/08/
-#Redirect 301 /blogs/2002_09.html http://zanshin.net/2002/09/
-#Redirect 301 /blogs/2002_10.html http://zanshin.net/2002/10/
-#Redirect 301 /blogs/2002_11.html http://zanshin.net/2002/11/
-#Redirect 301 /blogs/2002_12.html http://zanshin.net/2002/12/
-#Redirect 301 /blogs/2003_01.html http://zanshin.net/2003/01/
-#Redirect 301 /blogs/2003_02.html http://zanshin.net/2003/02/
-#Redirect 301 /blogs/2003_03.html http://zanshin.net/2003/03/
-#Redirect 301 /blogs/2003_04.html http://zanshin.net/2003/04/
-#Redirect 301 /blogs/2003_05.html http://zanshin.net/2003/05/
-#Redirect 301 /blogs/2003_06.html http://zanshin.net/2003/06/
-#Redirect 301 /blogs/2003_07.html http://zanshin.net/2003/07/
-#Redirect 301 /blogs/2003_08.html http://zanshin.net/2003/08/
-#Redirect 301 /blogs/2003_09.html http://zanshin.net/2003/09/
-#Redirect 301 /blogs/2003_10.html http://zanshin.net/2003/10/
-#Redirect 301 /blogs/2003_11.html http://zanshin.net/2003/11/
-#Redirect 301 /blogs/2003_12.html http://zanshin.net/2003/12/
-#Redirect 301 /blogs/2004_01.html http://zanshin.net/2004/01/
-#Redirect 301 /blogs/2004_02.html http://zanshin.net/2004/02/
-#Redirect 301 /blogs/2004_03.html http://zanshin.net/2004/03/
-#Redirect 301 /blogs/2004_04.html http://zanshin.net/2004/04/
-#Redirect 301 /blogs/2004_05.html http://zanshin.net/2004/05/
-#Redirect 301 /blogs/2004_06.html http://zanshin.net/2004/06/
-#Redirect 301 /blogs/2004_07.html http://zanshin.net/2004/07/
-#Redirect 301 /blogs/2004_08.html http://zanshin.net/2004/08/
-#Redirect 301 /blogs/2004_09.html http://zanshin.net/2004/09/
-#Redirect 301 /blogs/2004_10.html http://zanshin.net/2004/10/
-#Redirect 301 /blogs/2004_11.html http://zanshin.net/2004/11/
-#Redirect 301 /blogs/2004_12.html http://zanshin.net/2004/12/
-#Redirect 301 /blogs/2005_01.html http://zanshin.net/2005/01/
-#Redirect 301 /blogs/2005_02.html http://zanshin.net/2005/02/
-#Redirect 301 /blogs/2005_03.html http://zanshin.net/2005/03/
-#Redirect 301 /blogs/2005_04.html http://zanshin.net/2005/04/
-#Redirect 301 /blogs/2005_05.html http://zanshin.net/2005/05/
-#Redirect 301 /blogs/2005_06.html http://zanshin.net/2005/06/
-#Redirect 301 /blogs/2005_07.html http://zanshin.net/2005/07/
-#Redirect 301 /blogs/2005_08.html http://zanshin.net/2005/08/
-#Redirect 301 /blogs/2005_09.html http://zanshin.net/2005/09/
-#Redirect 301 /blogs/2005_10.html http://zanshin.net/2005/10/
-#edirect 301 /blogs/2005_11.html http://zanshin.net/2005/11/
-#edirect 301 /blogs/2005_12.html http://zanshin.net/2005/12/
-#Redirect 301 /blogs/2006_01.html http://zanshin.net/2006/01/
-#Redirect 301 /blogs/2006_02.html http://zanshin.net/2006/02/
-#Redirect 301 /blogs/2006_03.html http://zanshin.net/2006/03/
-#Redirect 301 /blogs/2006_04.html http://zanshin.net/2006/04/
-#Redirect 301 /blogs/2006_05.html http://zanshin.net/2006/05/
-#Redirect 301 /blogs/2006_06.html http://zanshin.net/2006/06/
-#Redirect 301 /blogs/2006_07.html http://zanshin.net/2006/07/
-#Redirect 301 /blogs/2006_08.html http://zanshin.net/2006/08/
-#Redirect 301 /blogs/2006_09.html http://zanshin.net/2006/09/
-#Redirect 301 /blogs/2006_10.html http://zanshin.net/2006/10/
-#Redirect 301 /blogs/2006_11.html http://zanshin.net/2006/11/
-#Redirect 301 /blogs/2006_12.html http://zanshin.net/2006/12/
-#Redirect 301 /blogs/2007_01.html http://zanshin.net/2007/01/
-#Redirect 301 /blogs/2007_02.html http://zanshin.net/2007/02/
-#Redirect 301 /blogs/2007_03.html http://zanshin.net/2007/03/
-#Redirect 301 /blogs/2007_04.html http://zanshin.net/2007/04/
-#Redirect 301 /blogs/2007_05.html http://zanshin.net/2007/05/
-#edirect 301 /blogs/2007_06.html http://zanshin.net/2007/06/
-#Redirect 301 /blogs/2007_07.html http://zanshin.net/2007/07/
-#Redirect 301 /blogs/2007_08.html http://zanshin.net/2007/08/
-#edirect 301 /blogs/2007_09.html http://zanshin.net/2007/09/
-#Redirect 301 /blogs/2007_10.html http://zanshin.net/2007/10/
-#Redirect 301 /blogs/2007_11.html http://zanshin.net/2007/11/
-#Redirect 301 /blogs/2007_12.html http://zanshin.net/2007/12/
+RedirectMatch 301 /blogs/\d{4}_\d{2}.html http://zanshin.net/archives/
 
 # redirect old wordpress media links to images folder
 RedirectMatch 301 /wp-content/uploads/\d{4}/\d{2}/(.*) http://zanshin.net/images/$1
