by moving asin variable assignment to _config.yml, the for loop in aws.html works. need a better solution than this, but at least it is working now.

--- a/_config.yml
+++ b/_config.yml
@@ -82,3 +82,6 @@ disqus_short_name: zanshinnet
 
 # Google Analytics
 google_analytics_tracking_id: UA-373283-1
+
+# Amazon ASINs
+asins: ["044656432X", "0743276396", "B001YT048E"]
