updated current asin number. used new raw tag to remove slashes escaping tags

--- a/_config.yml
+++ b/_config.yml
@@ -84,4 +84,4 @@ disqus_short_name: zanshinnet
 google_analytics_tracking_id: UA-373283-1
 
 # Amazon ASINs
-asins: ["044656432X", "0743276396", "B001YT048E"]
+asins: ["044656432X", "0307717097", "1933988657", "B001O9CES2"]
