--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
 #default_asides: [custom/asides/title.html, custom/asides/about.html, asides/recent_posts.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html]
-default_asides: [custom/asides/title.html, custom/asides/about.html, asides/recent_posts.html, asides/twitter.html, custom/asides/aws.html]
+default_asides: [custom/asides/title.html, custom/asides/about.html, asides/recent_posts.html, asides/twitter.html]
 #default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
@@ -83,5 +83,3 @@ disqus_short_name: zanshinnet
 # Google Analytics
 google_analytics_tracking_id: UA-373283-1
 
-# Amazon ASINs
-asins: ["044656432X", "0307717097", "1933988657", "B001O9CES2"]
