--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ default_asides: [custom/asides/title.html, custom/asides/about.html, asides/rece
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: zan5hin
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
