--- a/_config.yml
+++ b/_config.yml
@@ -79,6 +79,7 @@ delicious_count: 3
 
 # Disqus Comments
 disqus_short_name: zanshinnet
+disqus_show_comment_count: true
 
 # Google Analytics
 google_analytics_tracking_id: UA-373283-1
