--- a/source/htaccess/.htaccess
+++ b/source/htaccess/.htaccess
@@ -1,10 +1,11 @@
+#Options +FollowSymLinks
 RewriteEngine on
-RewriteBase /
+#RewriteBase /
 
-# change 7/2/2012
-RewriteCond %{HTTP_HOST} ^www\.zanshin\.net$ [NC]
-RewriteRule ^(.*)$ http://zanshin.net/$1 [R=301,L]
-
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+#RewriteCond %{HTTP_HOST} ^www\.zanshin\.net$ [NC]
+#RewriteRule (.*) http://zanshin.net/$1 [R=301,NC]
 
 # added old MoveableType redirects as there are still links (kottke.org!) that use them
 Redirect 301 /blogs/001398.html http://zanshin.net/2007/12/29/moving/
