Added generic RSS feed aside.
Following steps outlined here: http://jeffmueller.net/blog/2013/02/22/generic-rss-sidebar-for-octopress/
implemented generic feed to display my Pocket unread feed.

	modified:   _config.yml
	modified:   sass/partials/_sidebar.scss
	new file:   sass/partials/sidebar/_rss_feed.scss
	new file:   source/_includes/custom/asides/rss_feed.html
	new file:   source/javascripts/rss_feed.js

--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
 #default_asides: [custom/asides/title.html, custom/asides/about.html, asides/recent_posts.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html]
-default_asides: [custom/asides/title.html, custom/asides/about.html, asides/recent_posts.html, asides/twitter.html, custom/asides/category_list.html, custom/asides/spj.html]
+default_asides: [custom/asides/title.html, custom/asides/about.html, asides/recent_posts.html, custom/asides/rss_feed.html, custom/asides/category_list.html, custom/asides/spj.html]
 #default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
@@ -85,4 +85,11 @@ disqus_show_comment_count:
 
 # Google Analytics
 google_analytics_tracking_id: UA-373283-1
+
+# RSS Feed
+rss_feed_url: http://getpocket.com/users/mark_the_cellist/feed/unread
+rss_feed_title: "What I'm Reading"
+rss_feed_include_link_to_feed: true
+rss_feed_link_title: "My Pocket Feed"
+
 
