--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
 #default_asides: [custom/asides/title.html, custom/asides/about.html, asides/recent_posts.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html]
-default_asides: [custom/asides/title.html, custom/asides/about.html, asides/recent_posts.html, custom/asides/rss_feed.html, custom/asides/category_list.html, custom/asides/spj.html]
+default_asides: [custom/asides/title.html, custom/asides/about.html, asides/recent_posts.html, custom/asides/rss_feed.html, custom/asides/category_list.html, custom/asides/adn.html]
 #default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
@@ -80,8 +80,8 @@ delicious_count: 3
 # Disqus Comments
 # disqus_short_name: zanshinnet
 # disqus_show_comment_count: true
-disqus_short_name: 
-disqus_show_comment_count: 
+disqus_short_name:
+disqus_show_comment_count:
 
 # Google Analytics
 google_analytics_tracking_id: UA-373283-1
